<resources>
    <string name="app_name">PawPatrol</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_title">Login</string>
    <string name="register_button_title">Create account</string>
    <string name="restore_password_button_title">Forgot password?</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="pet_main_attached_photo">Pet\'s main attached photo</string>
    <string name="pet_name">Pet\'s name</string>
    <string name="pet_short_description">Pet\'s short description</string>
    <string name="failed_to_authenticate">Failed to authenticate!</string>
    <string name="register_title">Register</string>
    <string name="failed_to_register">Failed to register!</string>
    <string name="reset_title">Reset password</string>
    <string name="reset_pass_button_title">Send email</string>
    <string name="failed_to_reset_pass">Failed to send reset email!</string>
    <string name="reset_email_sent">Reset email sent!</string>
    <string name="profile_menu_item">Profile</string>
    <string name="add_missing_animal_note_button_content_desc">Add missing animal note</string>
    <string name="missing_pets_search">Missing pets</string>
    <string name="profile">Profile</string>
    <string name="add_note">Report missing pet</string>
    <string name="edit_note">Edit note on pet</string>
    <string name="pet_name_hint">Pet name</string>
    <string name="description_hint">Describe yor pet, whether he had collar, where did accident happen and when etc.</string>
    <string name="upload_image">Upload image</string>
    <string name="create_note">Create note</string>
    <string name="provide_pet_name">Provide pet name</string>
    <string name="provide_description">Provide description of missing pet and circumstances</string>
    <string name="note_created">Note created</string>
    <string name="failed_to_create_note">Failed to create note!</string>
    <string name="failed_to_upload_image">Failed to upload image!</string>
    <string name="no_missing_pets">No missing pets, hurray!</string>
    <string name="edit_user_info">Edit info</string>
    <string name="logout">Logout</string>
    <string name="your_notes">Your missing pets</string>
    <string name="report_pet">Report pet to owner</string>
    <string name="delete_note">Delete note</string>
    <string name="please_attach_image">Please attach image</string>
    <string name="report_description_hint">Describe where you saw this pet</string>
    <string name="attach_photo">Attach photo</string>
    <string name="send_report">Send report</string>
    <string name="failed_to_send_report">Failed to send report</string>
    <string name="report_sent">Report sent successfully!</string>
    <string name="see_reports">See reports</string>
    <string name="no_reports">No reports</string>
    <string name="pet_position">Pet position</string>
    <string name="note_edited">Note edited!</string>
    <string name="failed_to_edit_note">Failed to edit note!</string>
    <string name="edit_menu_item">Edit note</string>
</resources>