<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/report_description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/report_description_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/report_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attached_photos_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/attached_photos_recycler_view_height"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="false"
            tools:itemCount="4"
            tools:listitem="@layout/attached_image_view_holder"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/attach_photo_button"
            style="@style/AppButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/attach_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_report_button"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/send_report" />

    </LinearLayout>

</ScrollView>